Add # of trademarks registered

--- a/dashboard/organizations.html
+++ b/dashboard/organizations.html
@@ -25,12 +25,12 @@
                 </a>
             </li>
             <li><a href="/dashboard/events.html" class="">
-                    <img src="/img/icons/events.svg" alt="users logo">
+                    <img src="/img/icons/events.svg" alt="events logo">
                     <span>Events</span>
                 </a>
             </li>
             <li><a href="/dashboard/ip-programms.html" class="">
-                    <img src="/img/icons/white.svg" alt="users logo">
+                    <img src="/img/icons/events.svg" alt="programms logo">
                     <span>IP Programs</span>
                 </a>
             </li>
