--- a/index.html
+++ b/index.html
@@ -182,6 +182,14 @@
                                     </div>
                                     <div class="col-md-6">
                                         <select class="form-select mb-3" aria-label="# of patents filed">
+                                            <option selected># of trademarks registered</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <select class="form-select mb-3" aria-label="# of patents filed">
                                             <option selected>Organizations affiliated</option>
                                             
                                                 <option value="Accelerate Okanagan">Accelerate Okanagan</option>
