--- a/event.html
+++ b/event.html
@@ -59,6 +59,7 @@
                     Virtual
                 </span>
                 <h1 class="h2">Understanding IP: The different ways to protect your ideas and inventions</h1>
+                <h6>The different ways to protect your ideas and inventions</h6>
             </div>
         </div>
         <div id="single-event-content">
