--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                             <option value="3">3</option>
                                         </select>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-12">
                                         <select class="form-select mb-3" aria-label="# of patents filed">
                                             <option selected>Organizations affiliated</option>
                                             
